Fixed user uploadable's z-index

--- a/css/User.css
+++ b/css/User.css
@@ -36,7 +36,7 @@
 .users.gray .button-follow:hover, .users.gray .button-follow:active { color: #2ecc71; }
 .users.gray .name { color: #333; }
 
-.user .uploadable .icon-upload { position: absolute; margin-left: -60px; z-index: 999; margin-top: -4px; opacity: 1; background-color: rgba(0, 0, 0, 0.5); background-position: 11px 11px; width: 50px; height: 50px; border-radius: 50%; }
+.user .uploadable .icon-upload { position: absolute; margin-left: -60px; z-index: 1; margin-top: -4px; opacity: 1; background-color: rgba(0, 0, 0, 0.5); background-position: 11px 11px; width: 50px; height: 50px; border-radius: 50%; }
 .user .uploadable .icon-upload:hover { box-shadow: inset 0 0 0 5px rgb(211, 12, 55) !important }
 .bg-preview { border-radius: 5px }
 .bg-settings > .uploadable a.icon.icon-upload { border-radius: 0; margin-top: 0px; width: 160px; height: 86px; background-position: 65px 30px; border-radius: 5px }
